update in chalake

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -14,7 +14,9 @@
             <a href="#" class="nav-link">دەربارەی</a>
         </li>
         <li class="nav-item nav-item-res">
-            <a href="#" class="nav-link">Event</a>
+            <a href="#" class="nav-link">
+              جالاکی 
+            </a>
         </li>
         <li class="nav-item nav-item-res">
             <a href="#" class="nav-link">Activity</a>
