--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,25 +4,26 @@
     <a class="navbar-brand" href="#">
         <img class="img-nawa" src="https://scontent.febl5-2.fna.fbcdn.net/v/t1.0-1/p160x160/67247192_116056459711628_6227938213990760448_o.jpg?_nc_cat=106&_nc_sid=dbb9e7&_nc_oc=AQk9Vk5A7zBx6aNRoP6ZQ6XOxDS4jhtafT8qcwlUFykY-FD7s1zonxY63gnt-Tpv9aY&_nc_ht=scontent.febl5-2.fna&_nc_tp=6&oh=e4698840a27fea839517865ff38e0bdb&oe=5EFE2A50" width="30" height="30" alt="">
       NAWA Organaization
+      <span class="span-res">تۆری نەوا بۆ رێکخراوە مەدەنیەکان</span>
     </a>   
        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-i">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse div-style" id="navbar-i">
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav ml-auto ul-responsive">
         <li class="nav-item nav-item-res">
-            <a href="#" class="nav-link">دەربارەی</a>
+            <a href="#" class="nav-link">وتارەکان</a>
         </li>
         <li class="nav-item nav-item-res">
             <a href="#" class="nav-link">
-              جالاکی 
+               دەربارەی تۆرەکە 
             </a>
         </li>
         <li class="nav-item nav-item-res">
-            <a href="#" class="nav-link">Activity</a>
+            <a href="#" class="nav-link">چالاکیەکان</a>
         </li>
         <li class="nav-item nav-item-res border-res">
-            <a href="#" class="nav-link text-danger border-res-a ">Contact</a>
+            <a href="#" class="nav-link text-danger border-res-a ">پەیوەندی</a>
         </li>
     </ul>
 </div>
@@ -33,7 +34,7 @@
     <div class="col-12 img-nawa1-color">
 
       <div class="card-desing ">
-      <h1 >تۆری نەوا بۆرێکخراوە مەدەنیەکان</h1>
+      <h1 class="h-style" >تۆری نەوا بۆرێکخراوە مەدەنیەکان</h1>
         <p class="p-4 p-style">ئامانجەکانی تۆری نەوا
           یەکەم
           1 - کاردەکات بۆ بەرگری کردن لە مافی هاوڵاتیان لەسەر بنەمای پاراستنی مافی مرۆڤ و دادی کۆمەڵایەتی
@@ -41,9 +42,7 @@
           گەشەپێدانی هونەری و کلتووری تاک بە هەموو شێوازە جیاجیاکانییەوە (شێوەکاری، شانۆیی، سینەمایی، سرودو مۆسیقا، ...هتد.
           3- گەشەپێدان بەلایەنى زانستى و خوێندن.
           4- چارەسەرکردنى کێشەى کشتوکال و ژینگە.
-          5- گێرانەوەى شکۆمەندى بۆ مرۆڤەکان لە رێگەى داکۆکى کردن لە مافەکانیان بۆ دەستەبەرکردنى پێویستیەکانیان .
-          6- گەشەبێدانى تواناکانى تاک لە کۆمەلگا لە بوارى رۆشنبیرى و کەلتورى و ڕاگەیاندنێکى سەربەخۆ .
-          7- هەڵدەدات ناوەندێکی بەهێزی گوشاربێت بۆ پارێزگاری لە سەربەخۆی ڕبَکخراوەکان وئامانجە پیشەیەکانیان .</p>
+</p>
      
       </div>  
       <button type="button" class="btn btn-danger btn-lg btn-design">زیــــــــاتر</button>
@@ -57,7 +56,7 @@
 <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-interval="10000">
-      <img src="https://scontent.febl5-2.fna.fbcdn.net/v/t1.0-9/81043422_162491771734763_7808840492245843968_n.jpg?_nc_cat=100&_nc_sid=110474&_nc_ohc=eaY9KFQovH4AX9VgMrj&_nc_ht=scontent.febl5-2.fna&oh=1ec7f3746707da662089579c41595a70&oe=5EEECC4B" class="d-block w-100" alt="...">
+      <img  src="https://scontent.febl5-2.fna.fbcdn.net/v/t1.0-9/81043422_162491771734763_7808840492245843968_n.jpg?_nc_cat=100&_nc_sid=110474&_nc_ohc=eaY9KFQovH4AX9VgMrj&_nc_ht=scontent.febl5-2.fna&oh=1ec7f3746707da662089579c41595a70&oe=5EEECC4B" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item" data-interval="2000">
       <img src="https://scontent.febl5-1.fna.fbcdn.net/v/t1.0-9/81665302_166023148048292_3209373518336622592_n.jpg?_nc_cat=110&_nc_sid=110474&_nc_ohc=xsT_RDOyyM0AX-7Hq8K&_nc_ht=scontent.febl5-1.fna&oh=168001400983d844c9f22bbdfdcb203d&oe=5EF4FDC8" class="d-block w-100" alt="...">
@@ -138,15 +137,15 @@
         <div class="card shadow-lg">
           <img class="card-img-top" src="https://scontent.febl5-1.fna.fbcdn.net/v/t1.0-9/81665302_166023148048292_3209373518336622592_n.jpg?_nc_cat=110&_nc_sid=110474&_nc_ohc=xsT_RDOyyM0AX-7Hq8K&_nc_ht=scontent.febl5-1.fna&oh=168001400983d844c9f22bbdfdcb203d&oe=5EF4FDC8" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">کۆنفرانسی بازرگانی</h5>
+            <h5 class="card-title text-align-center">کۆنفرانسی بازرگانی</h5>
             <p class="card-text">ئەمرۆ تۆری نەوا بۆ رێکخراوە مەدەنیەکان لە هەماهەنگی و هاوکاری وەزارەتی بازرگانی و پیشەسازی کۆنفرانسی پەرەپێدانی کەرتی پیشەسازی سەرخست ،کۆنفرانسێک تایبەتمەندی بە هاوکاری رێکخراوە مەدەنیەکان دا لە هەماهەنگی دامەزراوەکان بۆ پێشخستنی بوارێکی گرنگی کۆمەڵگەکەکەرتی</p>
             <p class="card-text "><small class=" text-danger">13/1/2020</small></p>
           </div>
         </div>
         <div class="card shadow-lg">
-          <img class="card-img-top" src="https://scontent.febl5-2.fna.fbcdn.net/v/t1.0-9/73314405_143466850303922_292969928397422592_n.jpg?_nc_cat=109&_nc_sid=110474&_nc_ohc=vmicLUh6TWAAX-rmggp&_nc_ht=scontent.febl5-2.fna&oh=5d40eee5bf2efb4ec890dba0132b5311&oe=5EBE950D" alt="Card image cap">
+          <img class="card-img-top card-img-top-1" src="https://scontent.febl5-2.fna.fbcdn.net/v/t1.0-9/73314405_143466850303922_292969928397422592_n.jpg?_nc_cat=109&_nc_sid=110474&_nc_ohc=vmicLUh6TWAAX-rmggp&_nc_ht=scontent.febl5-2.fna&oh=5d40eee5bf2efb4ec890dba0132b5311&oe=5EBE950D" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">پێکەوەژیان لەنێوان ئایینەکان</h5>
+            <h5 class="card-title text-align-center">پێکەوەژیان لەنێوان ئایینەکان</h5>
             <p class="card-text">تۆڕی نەوا بۆ ڕێکخراوە مەدەنییەکان بەهاوکاری ڕێکخراوی مەسەلە هەڵسا بە ئەنجامدانی پانێڵی (پێکەوەژیان لەنێوان ئایینەکان).
               ۲۰۱۹/۱۰/۲٦
               هۆڵی سەنتەری ڕۆشنبیری وکۆمەڵایەتی زانکۆی صلاح الدین.</p>
@@ -159,7 +158,7 @@
         <div class="card shadow-lg">
           <img class="card-img-top" src="https://scontent.febl5-2.fna.fbcdn.net/v/t1.0-9/80389090_161477391836201_2644595987611385856_n.jpg?_nc_cat=104&_nc_sid=110474&_nc_ohc=cEn1lwTpcqgAX9JM94O&_nc_ht=scontent.febl5-2.fna&oh=cadfa3311ebc4e0987128676122f6c3f&oe=5EB586A2" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">رەوشی پێکهاتەکان ،سیاسەت و پێکەوەژیان لەکوردستان</h5>
+            <h5 class="card-title text-align-center">رەوشی پێکهاتەکان ،سیاسەت و پێکەوەژیان لەکوردستان</h5>
             <p class="card-text">تۆڕی نەوا ؛
               گفتوکۆیەکی کراوەوگەرم ،سەبارەت بە( رەوشی پێکهاتەکان ،سیاسەت و پێکەوەژیان لەکوردستان)، لەنیوان نوێنەروسیاسیەتوانانی پێکهاتەکان و ئامادەبوان ئەنجامدرا</p>
             <p class="card-text"><small class="text-danger">28/12/2019</small></p>
@@ -168,7 +167,7 @@
         <div class="card shadow-lg">
           <img class="card-img-top" src="https://scontent.febl5-1.fna.fbcdn.net/v/t1.0-9/69264360_127106615273279_4092578945134755840_n.jpg?_nc_cat=108&_nc_sid=110474&_nc_ohc=G6ISU_XJSLkAX-xEkLq&_nc_ht=scontent.febl5-1.fna&oh=ace8a8ab4ae64cb87edf1a750c4c464d&oe=5EF5C02F" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">لە پێنـاو پـەروەردەێکی هاوچەرخ</h5>
+            <h5 class="card-title text-align-center">لە پێنـاو پـەروەردەێکی هاوچەرخ</h5>
             <p class="card-text">تـۆڕی نــەوا:بـۆڕێکخراوە مـەدەنیەکانN N C O
               کۆنفڕانسی دوەمی چاکسازی لە بواری پەروەردە بە دروشمی"لە پێنـاو پـەروەردەێکی هاوچەرخ" سـاز کرد .بە .</p>
             <p class="card-text"><small class="text-danger">29/8/2019</small></p>
@@ -177,7 +176,7 @@
         <div class="card shadow-lg">
           <img class="card-img-top" src="https://scontent.febl5-2.fna.fbcdn.net/v/t1.0-9/67479802_118878056096135_941246214676938752_o.jpg?_nc_cat=104&_nc_sid=8024bb&_nc_ohc=aZlIboj0ut0AX-AmTXW&_nc_ht=scontent.febl5-2.fna&oh=33833300b0ad0dc1388e817e01fa9196&oe=5F0183F5" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">کۆنفرانسی کۆربەندی چاکسازی </h5>
+            <h5 class="card-title text-align-center">کۆنفرانسی کۆربەندی چاکسازی </h5>
             <p class="card-text">تۆڕی نە وا؛ بە سە رکە وتوی بە ئامە دە بونی هە لبژاردە یە کی دیاری هە رێمی کوردستان کۆنفرانسی کۆربەندی چاکسازی سازدا.</p>
             <p class="card-text"><small class="text-danger">4/10/2019</small></p>
           </div>
@@ -216,12 +215,12 @@
         </dl>
       </div>
       <div class="col-md-4 col-xl-3">
-        <h5>Links</h5>
+        
         <ul class="nav-list">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Event</a></li>
-          <li><a href="#">Activity</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li class="li-resp"><a href="#">About</a></li>
+          <li class="li-resp"><a href="#">Event</a></li>
+          <li class="li-resp"><a href="#">Activity</a></li>
+          <li class="li-resp"><a href="#">Contacts</a></li>
         
         </ul>
       </div>
