--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -12,14 +12,32 @@ body ,p ,h1 ,h2 ,h3 ,h4, h5 ,h6 {
 margin: 0 250px !important;
 }
 .nav-item-res{
-padding: 0 30px;
-font-weight: 700;
-font-size: 25px;
+    padding: 0px 16px;
+    font-weight: 700;
+    font-size: 25px;
 }
 @media (min-width: 576px) and (max-width: 767.98px) { 
     .nav-item-res{
         font-size: 15px !important;
     }
+   
+ }
+ @media (max-width:448px){
+    #navbar-i{
+        text-align: center !important;
+        margin: 0px auto !important;
+    }  
+    .card-desing{
+        text-align: center;
+        font-size: 20px;
+        color: white;
+        padding: 14px 0px !important;
+    }
+    .h-style{
+        font-size: 30px !important;
+    }
+ 
+  
  }
  .border-res{
      border: 1px solid red;
@@ -81,7 +99,27 @@ margin-bottom: 25px !important;
 
 ul, ol {
     list-style: none;
-    padding: 0;
-    margin: 0;
 }
 
+.card-img-top-1{
+    height: 228px !important;
+
+}
+
+.li-resp{
+    padding: 5px 0 !important;
+}
+
+.span-res{
+    top: 60px;
+    position: absolute;
+    left: 134px
+}
+
+.card:hover{
+    transform: scale(1) !important;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.6) !important;
+}
+img{
+    background-size: cover !important;
+}
