--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -15,15 +15,15 @@
             <a href="#" class="nav-link">وتارەکان</a>
         </li>
         <li class="nav-item nav-item-res">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link" routerLink="/definition">
                دەربارەی تۆرەکە 
             </a>
         </li>
         <li class="nav-item nav-item-res">
             <a href="#" class="nav-link">چالاکیەکان</a>
         </li>
-        <li class="nav-item nav-item-res border-res">
-            <a href="#" class="nav-link text-danger border-res-a ">پەیوەندی</a>
+        <li class="nav-item nav-item-res border-res ">
+            <a href="#" class="nav-link text-danger border-res-a border-res-a-danger">پەیوەندی</a>
         </li>
     </ul>
 </div>
@@ -45,7 +45,7 @@
 </p>
      
       </div>  
-      <button type="button" class="btn btn-danger btn-lg btn-design">زیــــــــاتر</button>
+      <button type="button" class="btn btn-auotline-danger btn-lg btn-design">زیــــــــاتر</button>
         
     </div>
   </div>
