--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -15,6 +15,7 @@ margin: 0 250px !important;
     padding: 0px 16px;
     font-weight: 700;
     font-size: 25px;
+    color: black !;
 }
 @media (min-width: 576px) and (max-width: 767.98px) { 
     .nav-item-res{
@@ -42,10 +43,21 @@ margin: 0 250px !important;
  .border-res{
      border: 1px solid red;
      background-color: red;
+     border-radius: 200px !important;
+     
+
      
  }
+ .border-res-a-danger:hover{
+color: #fff !important;
+ }
+.nav-link:hover{
+    border-bottom: 2px solid red;
+}
+
  .border-res-a{
      color: white !important;
+     
  }
  .container-card{
      margin: 60px auto;
@@ -79,11 +91,22 @@ margin: 0 250px !important;
     font-size: 20px;
     letter-spacing: 2px !important;
 }
-.btn-design{
+.btn-design {
 margin: 0 auto !important;
-padding: 15px 15px;
+padding: 15px 25px;
 display: block;
 margin-bottom: 25px !important;
+border-radius: 200px ;
+color: #fff;
+background-color: #ff0000;
+border: 1px solid red;
+
+}
+.btn-design:hover
+.btn-design:active{
+    background-color: tomato;
+    padding: 15px 35px !important;
+
 }
 
 /* footer */
