--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,157 @@ body p h1 h2 h3 h4 h5 h6 {
 html {
     overflow-x: hidden !important;
 }
+
+
+body ,p ,h1 ,h2 ,h3 ,h4, h5 ,h6 {
+    font-family: 'Tajawal', ;
+
+}
+.img-nawa{
+    width: 89px !important;
+    height: 76px !important;
+    margin-left: 50px !important;
+}
+.div-style{
+margin: 0 250px !important;
+}
+.nav-item-res{
+    padding: 0px 16px;
+    font-weight: 700;
+    font-size: 25px;
+    color: black !;
+}
+@media (min-width: 576px) and (max-width: 767.98px) { 
+    .nav-item-res{
+        font-size: 15px !important;
+    }
+   
+ }
+ @media (max-width:448px){
+    #navbar-i{
+        text-align: center !important;
+        margin: 0px auto !important;
+    }  
+    .card-desing{
+        text-align: center;
+        font-size: 20px;
+        color: white;
+        padding: 14px 0px !important;
+    }
+    .h-style{
+        font-size: 30px !important;
+    }
+ 
+  
+ }
+ .border-res{
+     border: 1px solid red;
+     background-color: red;
+     border-radius: 200px !important;
+     
+
+     
+ }
+ .border-res-a-danger:hover{
+color: #fff !important;
+ }
+.nav-link:hover{
+    border-bottom: 2px solid red;
+}
+
+ .border-res-a{
+     color: white !important;
+     
+ }
+ .container-card{
+     margin: 60px auto;
+ }
+ .text-align-center{
+     text-align: center !important;
+ }
+ 
+ .head-of-nawa{
+     margin: 10px auto !important;
+     text-align: center;
+     padding-bottom: 30px;
+ }
+
+ .img-nawa1-color{
+     margin: 40px auto;
+     background-image:linear-gradient(#4b6cb7,#182848);
+     width: 100% !important;
+     height: 100% !important;
+
+ }
+ .card-desing{
+     text-align: center;
+     font-size: 15px;
+     color: white;
+     padding: 45px 45px;
+ }
+.p-style{
+    padding: 30px !important;
+    line-height:30px;
+    font-size: 20px;
+    letter-spacing: 2px !important;
+}
+.btn-design {
+margin: 0 auto !important;
+padding: 15px 25px;
+display: block;
+margin-bottom: 25px !important;
+border-radius: 200px ;
+color: #fff;
+background-color: #ff0000;
+border: 1px solid red;
+
+}
+.btn-design:hover
+.btn-design:active{
+    background-color: tomato;
+    padding: 15px 35px !important;
+
+}
+
+/* footer */
+.context-dark, .bg-gray-dark, .bg-primary {
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.footer-classic a, .footer-classic a:focus, .footer-classic a:active {
+    color: #ffffff;
+}
+
+
+
+ul, ol {
+    list-style: none;
+}
+
+.card-img-top-1{
+    height: 228px !important;
+
+}
+
+.li-resp{
+    padding: 5px 0 !important;
+}
+
+.span-res{
+    top: 60px;
+    position: absolute;
+    left: 134px
+}
+
+.card:hover{
+    transform: scale(1) !important;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.6) !important;
+}
+img{
+    background-size: cover !important;
+}
+
+
+.headofnawa{
+    margin: 0 auto !important;
+}
