--- a/src/app/activity/activity.component.html
+++ b/src/app/activity/activity.component.html
@@ -136,6 +136,20 @@
     
     
     </div>
+<!--     
     
-    
-    
+    <form name="contact" method="POST" data-netlify="true">
+      <div class="form-group">
+        <label for="fname"> ناوی یەکەم</label>
+        <input type="text" class="form-control" name="name" id="name" placeholder="ئاکام">
+
+
+        <label for="email">ئیمەیلەکەت</label>
+        <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com">
+      </div>
+      
+  
+        <label for="message">نوسینی نامە</label>
+        <textarea class="form-control" name="message" id="message" rows="3"></textarea>
+        <input type="submit" value="Send Message" class="btn btn-success">
+    </form> -->
