--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -99,7 +99,7 @@
           </button>
         </div>
         <div class="modal-body">
-            <form name="contact" method="post" netlify>
+            <form >
                 <div class="form-group">
                   <label for="fname"> ناوی یەکەم</label>
                   <input type="text" class="form-control" name="name" id="name" placeholder="ئاکام">
