--- a/src/styles.css
+++ b/src/styles.css
@@ -160,3 +160,16 @@ img{
 .headofnawa{
     margin: 0 auto !important;
 }
+
+.card-img-top{
+    opacity: 1 !important;
+    transform: scale(0.8);
+    transition:transform 0.5s;
+    width: 100% !important;
+    background-color: #000;
+}
+
+.card-img-top:hover {
+    opacity: 0.8 !important;
+    transform: scale(1.1);
+}
